[package]
name = "timit"
version = "0.1.0"
authors = ["avery.radmacher <avery.radmacher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.2.1"
structopt = { version = "0.3", default-features = false }
